schema/testdata/errors/expressions_compare_model_operand_diff_types.keel
model User {
    fields {
        identity Identity @unique
    }
}

model BankAccount {
    fields {
        identity Identity @unique
    }

    actions {
        get getBankAccount(id) {
            //expect-error:55:57:AttributeExpressionError:cannot use operator '==' with types User and Identity
            @permission(expression: ctx.identity.user == bankAccount.identity)
        }
    }
}
